# gh-resume-aws-lambda

./: Cargo.toml  Dockerfile  Makefile  README.md
rsrc/: github.repos.graphql
src/: main.rs
