[package]
name = "github-resume-skills"
version = "0.1.0"
authors = ["Maximilian Kuschewski <maxi.kuschewski@gmail.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
load-dotenv = "^0.1.1"
graphql_client = "0.9.0"
reqwest = { version = "0.10.6", features = ["json", "blocking"] }

# Lambda requires an executable called 'bootstrap'
[[bin]]
name = "bootstrap"
path = "src/main.rs"